# Mathlibc

./: .gitignore  CMakeLists.txt  README.md
include/: mathlibc.h
include/datatypes/: fraction.h
include/datatypes/data/: hash.h  list.h  str.h  vec.h
include/fields/: combinatorics.h  number_theory.h
include/utils/: constants.h  number_properties.h
src/: CMakeLists.txt  lib.c  mathlibc.h
src/datatypes/: fraction.c
src/datatypes/data/: hash.c  list.c  str.c  vec.c
src/fields/: number_theory.c
test/: CMakeLists.txt  test.c
test/tests/datatypes/: fraction_test.h
test/tests/datatypes/data/: hash_test.h  list_test.h  str_test.h  vec_test.h
test/tests/fields/: number_theory_test.h
